fix header spacing, revert to "nice" font for main static content
git-svn-id: @166 -

--- a/css/fp.css
+++ b/css/fp.css
@@ -2,13 +2,10 @@
 
 body {
 	margin:0;
-	color:#555555;
+	color:#111111;
 	background-color:#FFFFFF;
-	text-align:left;
-}
-
-h1, h2, h3, h4, h5, h6, .submenu a {
 	font-family:"Trebuchet MS", Arial, Verdana, sans-serif;
+	text-align:left;
 }
 
 a {
@@ -29,7 +26,7 @@ ul li {
 	width:100%;
 	padding-top:20px;
 	padding-bottom:20px;
-	background-color:transparent;
+	background-color:#253183;
 	margin:0;
 	color:#ff0000;
 	text-align:center;
@@ -62,10 +59,15 @@ ul li {
 }
 
 #welcome {
-	margin:0 0 0 30px;
+	margin:0 0 0 40px;
 }
 #welcome a {
 	margin:0 5px;
+}
+
+#header .spacer {
+	height:1.4em;
+	float:left;
 }
 
 #header img {
@@ -82,6 +84,7 @@ ul li {
 	color:#253183;
 	background-color:#ffffff;
 	text-align:left;
+	clear:left;
 }
 #header h2 {
 	font-family:"Century Gothic", "Trebuchet MS", "Arial Narrow", Arial, sans-serif;
